Responsive index + refine.

--- a/source/sass/core/_icons.scss
+++ b/source/sass/core/_icons.scss
@@ -84,7 +84,7 @@
     pointer-events: none;
     position: absolute;
     right: $wrapper-padding;
-    top: $expander-one;
+    top: 44px;
 
     &:after,
     &:before {
