--- a/source/sass/modules/_screens.scss
+++ b/source/sass/modules/_screens.scss
@@ -1,5 +1,5 @@
 .screen {
-    background-color: $black;
+    background-color: rgba( 0, 0, 0, 0.9 );
     bottom: 0;
     left: 0;
     opacity: 0;
