--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -33,6 +33,9 @@
                 <li class="nav__menu__li">
                     <a href="/about/" class="nav__menu__a js-nav-item h3 -grey">About</a>
                 </li>
+                <li class="nav__menu__li">
+                    <a href="/featured/" class="nav__menu__a js-nav-item h3 -grey">Featured</a>
+                </li>
             </ul>
         </nav>
         <menu class="refine js-refine">
