Stub more of app. Responsive like a muther fucker.

--- a/source/sass/core/_pages.scss
+++ b/source/sass/core/_pages.scss
@@ -12,6 +12,7 @@
                 padding-left $long-duration $ease-cubic-sharp,
                 transform $long-duration $ease-cubic-sharp;
     width: 100%;
+    -webkit-overflow-scrolling: touch;
 
     &.is-reactive {
         }
