--- a/source/sass/core/_typography.scss
+++ b/source/sass/core/_typography.scss
@@ -12,6 +12,9 @@
 .p {
     @include p();
     }
+.pup {
+    margin-top: 20px;
+    }
 .ol,
 .ul {
     @include li();
@@ -67,13 +70,4 @@
 *******************************************************************************/
 .h1 {
     @include h1();
-    }
-.h2 {
-    @include h2();
-    }
-.h3 {
-    @include h3();
-    }
-.h4 {
-    @include h4();
     }
