--- a/source/sass/modules/_index.scss
+++ b/source/sass/modules/_index.scss
@@ -43,3 +43,12 @@
 .index__col:not( :first-child ) {
     padding-left: $expander-two;
     }
+
+
+
+.artist__name {
+    margin-bottom: 20px;
+    }
+.artist__gallery {
+    width: 40%;
+    }
