--- a/source/sass/state/_modifiers.scss
+++ b/source/sass/state/_modifiers.scss
@@ -5,6 +5,12 @@
     padding-bottom: $expander-one;
     padding-top: $expander-one;
     }
+.-exp-t {
+    padding-top: $expander-one;
+    }
+.-exp-b {
+    padding-bottom: $expander-one;
+    }
 .-exp-m {
     padding-bottom: $expander-mobile;
     padding-top: $expander-mobile;
