--- a/template/about.html
+++ b/template/about.html
@@ -1,3 +1,7 @@
 <section class="about -exp wrapper -text--center">
-    <p class="p">This is the about page</p>
+    <h1 class="h1">theindex.la</h1>
+    <div class="-exp -text--left -column -column--2of4">
+        <p class="p -grey">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+        <p class="p pup -grey">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+    </div>
 </section>
