no ex. yes arrow. h1. add deploy for staging.

--- a/source/sass/modules/_navigation.scss
+++ b/source/sass/modules/_navigation.scss
@@ -4,6 +4,7 @@
 .nav__menu {}
 .nav__menu__li {
     display: inline-block;
+    text-transform: capitalize;
     vertical-align: middle;
 
     &:not( :first-child ) {
