--- a/source/sass/state/_states.scss
+++ b/source/sass/state/_states.scss
@@ -53,13 +53,13 @@
 }
 
 .is-index-page {
-    .icon--refine {
+    .target--refine {
         display: inline-block;
         }
 }
 
 .is-artist-page {
-    .icon--ex {
+    .target--back {
         display: inline-block;
         }
 }
