--- a/template/artist/document.html
+++ b/template/artist/document.html
@@ -2,6 +2,8 @@
     <h1 class="artist__name h1">{{data.name.value}}</h1>
     <p class="artist__type p -grey" v-for="type in data.types.value">{{type.value.data.name.value}}</p>
     <div class="artist__gallery -exp-t -column">
-        <img v-for="galleryImage in data.gallery.value" class="artist__gallery__image image image--{{parseInt( galleryImage.value.image.width, 10 ) > parseInt( galleryImage.value.image.height, 10 ) ? 'wide' : 'tall'}} js-artist-image -exp" data-img-src="{{galleryImage.value.image.url}}" />
+        <div v-for="galleryImage in data.gallery.value" class="artist__gallery__image -exp">
+            <img class="image image--{{parseInt( galleryImage.value.image.width, 10 ) > parseInt( galleryImage.value.image.height, 10 ) ? 'wide' : 'tall'}} js-artist-image" data-img-src="{{galleryImage.value.image.url}}" />
+        </div>
     </div>
 </article>
