--- a/source/sass/core/_icons.scss
+++ b/source/sass/core/_icons.scss
@@ -4,8 +4,8 @@
 .icon-wrap {
     cursor: pointer;
     display: inline-block;
-    margin: -30px;
-    padding: 30px;
+    margin: -20px;
+    padding: 20px;
     }
 .icon {
     cursor: pointer;
@@ -40,7 +40,6 @@
 .icon--refine {
     border: 2px solid $black;
     border-radius: 100%;
-    display: none;
     height: 18px;
     transition: border-color $long-duration $ease-cubic-sharp;
     width: 18px;
@@ -57,37 +56,33 @@
         width: 8px;
         }
     }
-.icon--ex {
-    display: none;
-    height: 24px;
+.icon--back {
+    background-color: $black;
+    height: 2px;
     width: 24px;
 
     &:after,
     &:before {
         background-color: $black;
         content: "";
-        height: 100%;
-        left: 50%;
-        margin-left: -1px;
+        height: 13px;
+        left: 4px;
         position: absolute;
         width: 2px;
         }
     &:after {
+        top: -10px;
         transform: rotate( 45deg );
         }
     &:before {
+        top: -1px;
         transform: rotate( -45deg );
         }
     }
-.icon--ex--close {
-    display: inline-block;
-    pointer-events: none;
-    position: absolute;
-    right: $wrapper-padding;
-    top: 44px;
 
-    &:after,
-    &:before {
-        background-color: $white;
-        }
+
+
+.target--back,
+.target--refine {
+    display: none;
     }
